[workspace]
members = ["network2"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9"
mimalloc = "0.1.47"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
