[package]
name = "network2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rcgen = "0.14"
futures = "0.3.31"
parking_lot = "0.12.5"

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rand = { workspace = true }
mimalloc = { workspace = true }
csv = "1.4"
