[package]
name = "network2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rand = { workspace = true }
mimalloc = { workspace = true }
csv = "1.4"
quanta = "0.12.6"
